--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Screen Haze</string>
     <string name="notification_content">Running</string>
+    <string name="app_settings">Screen Haze Settings</string>
 </resources>
