--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Screen Haze</string>
     <string name="notification_content">Running</string>
+    <string name="app_settings">Screen Haze Settings</string>
 </resources>
