--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -3,4 +3,8 @@
     <string name="app_name">屏雾</string>
     <string name="notification_content">正在运行</string>
     <string name="app_settings">屏雾设置</string>
+    <string name="txt_darkness_rate">暗度</string>
+    <string name="txt_single_color">显示黑白画面</string>
+    <string name="btn_run">运行</string>
+    <string name="btn_exit">退出</string>
 </resources>
