--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Screen Haze</string>
     <string name="notification_content">Running</string>
     <string name="app_settings">Screen Haze Settings</string>
+    <string name="txt_darkness_rate">Darkness rate</string>
+    <string name="txt_single_color">Show black and white</string>
+    <string name="btn_run">Run</string>
+    <string name="btn_exit">Exit</string>
 </resources>
